# Qt-polygon

./: .gitignore  CMakeLists.txt  README.md  build.sh  start.sh
cmake-deps/: CMakeLists.txt  (+2 more)
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cxx
src/app/test-threads/: CMakeLists.txt  controller.cpp  controller.h  main.cxx  worker.cpp  worker.h
src/app/test-zmq/: CMakeLists.txt  main.cxx
src/dbadapter/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/zmq-helper/: CMakeLists.txt
src/my-lib-qt/: CMakeLists.txt
src/my-lib-qt/config/: CMakeLists.txt  config-private.h  config.cpp  config.h
src/my-lib-qt/treemodel/: CMakeLists.txt  node.cpp  node.h  treemodel-private.h  treemodel.cpp  treemodel.h
src/test/: CMakeLists.txt  main.cpp
src/zmq-divide-and-dominate/: CMakeLists.txt  scheme.md
src/zmq-divide-and-dominate/collectord/: CMakeLists.txt  main.cpp
src/zmq-divide-and-dominate/serverd/: CMakeLists.txt  main.cpp
src/zmq-divide-and-dominate/workerd/: CMakeLists.txt
src/zmq-divide-and-dominate/workerdcopy/: CMakeLists.txt
src/zmq-divide-and-dominate/workerdcopycopy/: CMakeLists.txt  main.cpp
src/zmq-extended-request-reply/: CMakeLists.txt  scheme.md
src/zmq-extended-request-reply/broker/: CMakeLists.txt  main.cpp
src/zmq-extended-request-reply/request/: CMakeLists.txt  main.cpp
src/zmq-extended-request-reply/respond/: CMakeLists.txt  main.cpp
src/zmq-handing-interrupt-signals/: CMakeLists.txt  main.cpp
src/zmq-msg-more/: CMakeLists.txt  main.cpp
src/zmq-multi-thread-server/: CMakeLists.txt  main.cpp  scheme.md
src/zmq-multiple-socket-poller/: CMakeLists.txt  main.cpp
src/zmq-pub-sub-key/: CMakeLists.txt
src/zmq-pub-sub-key/pub-key/: CMakeLists.txt  main.cpp
src/zmq-pub-sub-key/sub-key/: CMakeLists.txt  main.cpp
src/zmq-pub-sub-sync/: CMakeLists.txt  run.sh  scheme.md
src/zmq-pub-sub-sync/pub-sync/: CMakeLists.txt  main.cpp
src/zmq-pub-sub-sync/sub-sync/: CMakeLists.txt  main.cpp
src/zmq-publisher-subscriber/: CMakeLists.txt
src/zmq-publisher-subscriber/publisher/: CMakeLists.txt  main.cpp
src/zmq-relay-race/: CMakeLists.txt  main.cpp  scheme.md
src/zmq-request-reply-id/: CMakeLists.txt  main.cpp
src/zmq-router-dealer/: CMakeLists.txt  main.cpp  scheme.md
src/zmq-router-request/: CMakeLists.txt  main.cpp  scheme.md
(+17 files in other folders)
