add_subdirectory(my-lib-qt)
add_subdirectory(test)
add_subdirectory(zmq-divide-and-dominate)
add_subdirectory(zmq-request-reply)
add_subdirectory(zmq-publisher-subscriber)
add_subdirectory(zmq-multiple-socket-poller)
add_subdirectory(zmq-msg-more)
add_subdirectory(zmq-extended-request-reply)
add_subdirectory(zmq-handing-interrupt-signals)
add_subdirectory(zmq-multi-thread-server)
add_subdirectory(zmq-relay-race)
add_subdirectory(zmq-pub-sub-sync)
add_subdirectory(zmq-pub-sub-key)
add_subdirectory(zmq-request-reply-id)
add_subdirectory(zmq-router-request)
add_subdirectory(zmq-router-dealer)
add_subdirectory(dbadapter)
